--- a/public/index.html
+++ b/public/index.html
@@ -17,8 +17,31 @@
     const certificate = new ctutil.pkijs.Certificate({schema: asn1.result});
     console.log(certificate)
     const sct = ctutil.CertHelper.extractSCTFromCert(certificate);
-    console.log(sct)
-  };
+    console.log(sct);
+    /*
+    for (const sct_example of sct) {
+        console.log(sct_example);
+        const hash = new ctutil.LeafHash(ctutil.CertHelper.convertSCTToMerkleTreeLeaf(sct_example).getHash());
+        console.log(hash);
+        console.log(sct_example.logId);
+    }
+    */
+    const loglist = new ctutil.CTLogHelper();
+    loglist.fetch("https://www.gstatic.com/ct/log_list/log_list.json")
+        .then((value) => loglist.fetch("https://www.gstatic.com/ct/log_list/all_logs_list.json"))
+        .then((value) => loglist.generateIds())
+        .then((value) => {
+            //console.log(loglist.logs[0]);
+            for (const sct_example of sct) {
+                const findout = loglist.findById(sct_example.logId);
+                console.log(findout);
+                ctutil.CertHelper.verifySCTInclusion(sct_example, loglist)
+                .then((value1 => {
+                    console.log(value1);
+                }))
+            }
+        });
+    }
   reader.readAsArrayBuffer(f);
   });
 </script>
